get-yaml/deploylab2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    field.cattle.io/publicEndpoints: '[{"addresses":["172.16.100.2","172.16.101.2","172.16.102.2","172.16.103.2","172.16.104.2","172.16.105.2","172.16.106.2","172.16.107.2","172.16.108.2","172.16.11.2","172.16.110.2","172.16.111.2","172.16.112.2","172.16.13.2","172.16.14.2","172.16.153.2","172.16.154.2","172.16.155.2","172.16.156.2","172.16.157.2","172.16.166.2","172.16.167.2","172.16.168.2","172.16.169.2","172.16.170.2","172.16.173.2","172.16.174.2","172.16.175.2","172.16.176.2","172.16.177.2", [...]
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"demo8-1","namespace":"uptime-demo8-1"},"spec":{"replicas":1,"selector":{"matchLabels":{"workload.user.cattle.io/workloadselector":"apps.deployment-uptime-demo8-1"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"workload.user.cattle.io/workloadselector":"apps.deployment-uptime-demo8-1"}},"spec":{"containers":[{"image":"louislam/u [...]
  creationTimestamp: "2022-04-14T12:39:33Z"
  generation: 3
  name: demo8-1
  namespace: uptime-demo8-1
  resourceVersion: "2559055"
  uid: 4ea169fe-f2ff-4f6c-8db0-e6ff21b869fa
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-uptime-demo8-1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-uptime-demo8-1
    spec:
      containers:
      - image: louislam/uptime-kuma
        imagePullPolicy: IfNotPresent
        name: container-0
        ports:
        - containerPort: 3001
          name: demo8-1
          protocol: TCP
        resources:
          limits:
            cpu: 300m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 16Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/data
          name: demo8-1
        - mountPath: /etc/localtime
          name: tz-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: demo8-1
        persistentVolumeClaim:
          claimName: pvc-demo8-1
      - hostPath:
          path: /usr/share/zoneinfo/Asia/Bangkok
          type: File
        name: tz-config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2022-04-14T12:41:33Z"
    lastUpdateTime: "2022-04-14T12:41:33Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2022-04-14T12:39:33Z"
    lastUpdateTime: "2022-04-14T12:52:12Z"
    message: ReplicaSet "demo8-1-6b5f55679d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
