get-yaml/ingresslab2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["172.16.100.2","172.16.101.2","172.16.102.2","172.16.103.2","172.16.104.2","172.16.105.2","172.16.106.2","172.16.107.2","172.16.108.2","172.16.11.2","172.16.110.2","172.16.111.2","172.16.112.2","172.16.13.2","172.16.14.2","172.16.153.2","172.16.154.2","172.16.155.2","172.16.156.2","172.16.157.2","172.16.166.2","172.16.167.2","172.16.168.2","172.16.169.2","172.16.170.2","172.16.173.2","172.16.174.2","172.16.175.2","172.16.176.2","172.16.177.2", [...]
  creationTimestamp: "2022-04-14T12:40:10Z"
  generation: 1
  name: demo8-1-virtualhost-ingress
  namespace: uptime-demo8-1
  resourceVersion: "2549149"
  uid: ffc859d1-7ab3-479f-9263-f8e40bcdaa69
spec:
  ingressClassName: nginx
  rules:
  - host: itrmutt-uptime.k8s.ipv9.xyz
    http:
      paths:
      - backend:
          service:
            name: demo8-1
            port:
              number: 3001
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.16.100.2
    - ip: 172.16.101.2
    - ip: 172.16.102.2
    - ip: 172.16.103.2
    - ip: 172.16.104.2
    - ip: 172.16.105.2
    - ip: 172.16.106.2
    - ip: 172.16.107.2
    - ip: 172.16.108.2
    - ip: 172.16.11.2
    - ip: 172.16.110.2
    - ip: 172.16.111.2
    - ip: 172.16.112.2
    - ip: 172.16.13.2
    - ip: 172.16.14.2
    - ip: 172.16.153.2
    - ip: 172.16.154.2
    - ip: 172.16.155.2
    - ip: 172.16.156.2
    - ip: 172.16.157.2
    - ip: 172.16.166.2
    - ip: 172.16.167.2
    - ip: 172.16.168.2
    - ip: 172.16.169.2
    - ip: 172.16.170.2
    - ip: 172.16.173.2
    - ip: 172.16.174.2
    - ip: 172.16.175.2
    - ip: 172.16.176.2
    - ip: 172.16.177.2
    - ip: 172.16.200.2
    - ip: 172.16.202.2
    - ip: 172.16.203.2
    - ip: 172.16.204.2
    - ip: 172.16.205.2
    - ip: 172.16.207.2
    - ip: 172.16.208.2
    - ip: 172.16.210.2
    - ip: 172.16.213.2
    - ip: 172.16.214.2
    - ip: 172.16.215.2
    - ip: 172.16.219.2
    - ip: 172.16.220.2
    - ip: 172.16.221.2
    - ip: 172.16.222.2
    - ip: 172.16.230.2
    - ip: 172.16.231.2
    - ip: 172.16.232.2
    - ip: 172.16.233.2
    - ip: 172.16.234.2
    - ip: 172.16.235.2
    - ip: 172.16.238.2
    - ip: 172.16.239.2
    - ip: 172.16.240.2
    - ip: 172.16.241.2
    - ip: 172.16.242.2
    - ip: 172.16.243.2
    - ip: 172.16.244.2
    - ip: 172.16.246.2
    - ip: 172.16.247.2
    - ip: 172.16.34.5
    - ip: 172.16.38.2
    - ip: 172.16.4.2
    - ip: 172.16.40.2
    - ip: 172.16.41.2
    - ip: 172.16.42.2
    - ip: 172.16.43.2
    - ip: 172.16.44.2
    - ip: 172.16.45.2
    - ip: 172.16.46.2
    - ip: 172.16.47.2
    - ip: 172.16.48.2
    - ip: 172.16.99.2
